--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "angular-font-awesome": "^3.1.2",
     "chart.js": "^4.0.1",
     "font-awesome": "^4.7.0",
+    "bootstrap": "^3.4.1",
+    "firebase": "9.9.2",
+    "firebase-admin": "^11.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
